--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,14 @@
 name: Build VLC 1.7.5 for Android
 
 on:
+  push:        # run on every commit
+    branches:  # you can limit if needed
+      - "**"   # all branches
   workflow_dispatch: # manual trigger
-  push:
-    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repo
@@ -36,4 +37,3 @@ jobs:
         with:
           name: vlc-android-apk
           path: vlc-android/build/outputs/apk/debug/*.apk
-
