--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           docker run --rm -v ${{ github.workspace }}:/workspace vlc-android-builder bash -c "
             set -e
+            git config --global --add safe.directory /workspace
             cd /workspace
 
             # Clone VLC Android sources if not present
