fix bash: line 18: ./compile.sh: No such file or directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
             git config --global --add safe.directory /workspace/vlc-android
 
             # Compile native libs
+            # Make sure script is executable
+            chmod +x compile.sh
             ./compile.sh armv7
 
             # Build APK
